5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4186/executions/1582_1330.log
== TEST (2019-03-12 17:39:11) 
-- CODE:
print (41 6)
-- ERROR:
File "XXXX", line 1
    print (41 6)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:13) 
-- CODE:
print (41 6)
-- EXECUTION TIME:
0.209006
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print (41 6)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:41) 
-- CODE:
print (41 . 6)
-- ERROR:
File "XXXX", line 1
    print (41 . 6)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:42) 
-- CODE:
print (41 . 6)
-- EXECUTION TIME:
0.100727
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print (41 . 6)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:46) 
-- CODE:
print (41.6)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:48) 
-- CODE:
print (41.6)
-- EXECUTION TIME:
0.129423
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:00) 
-- CODE:
print (41.6)
-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:40:02) 
-- CODE:
print (41.6)
-- EXECUTION TIME:
0.185958
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:06) 
-- CODE:
print (41 .6)
-- ERROR:
File "XXXX", line 1
    print (41 .6)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:40:07) 
-- CODE:
print (41 .6)
-- EXECUTION TIME:
0.140902
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print (41 .6)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:14) 
-- CODE:
print (41 .66)
-- ERROR:
File "XXXX", line 1
    print (41 .66)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:40:15) 
-- CODE:
print (41 .66)
-- EXECUTION TIME:
0.163557
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print (41 .66)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:25) 
-- CODE:
print(41 .66)
-- ERROR:
File "XXXX", line 1
    print(41 .66)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:40:27) 
-- CODE:
print(41 .66)
-- EXECUTION TIME:
0.165911
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 1
    print(41 .66)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:10) 
-- CODE:
print("41.66")
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:41:11) 
-- CODE:
print("41.66")
-- EXECUTION TIME:
0.137922
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:41:11) 
-- CODE:
print("41.66")
-- EXECUTION TIME:
0.128433
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:12) 
-- CODE:
print("41.66")
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:41:12) 
-- CODE:
print("41.66")
-- EXECUTION TIME:
0.173767
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:14) 
-- CODE:
print("41.66")
-- OUTPUT:
41.66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:41:15) 
-- CODE:
print("41.66")
-- EXECUTION TIME:
0.170958
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:00) 
-- CODE:
print("41. 66")
-- OUTPUT:
41. 66
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:01) 
-- CODE:
print("41. 66")
-- EXECUTION TIME:
0.148314
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41. 66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:43:35) 
-- CODE:
round("41. 66")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("41. 66")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:43:36) 
-- CODE:
round("41. 66")
-- EXECUTION TIME:
0.185346
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    round("41. 66")
TypeError: type str doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:45:21) 
-- CODE:
print(round("41. 66")
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:45:23) 
-- CODE:
print(round("41. 66")
-- EXECUTION TIME:
0.173789
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:49:23) 
-- CODE:
print(round("41.67,42")
-- EXECUTION TIME:
0.142763
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                           ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:49:37) 
-- CODE:
print(round(41.67,42))
-- EXECUTION TIME:
0.181971
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
